envoy-gateway/tracing/datadog-uds.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: datadog-uds
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    labels:
      # admission.datadoghq.com/enabled: "true"
      # agent.datadoghq.com/sidecar: fargate
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: datadog-uds
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-agent
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: eg-addons
    app.kubernetes.io/name: opentelemetry-collector
    component: standalone-collector
  ports:
    - protocol: TCP
      port: 8126
      targetPort: 8126
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: datadog
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: datadog-uds
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /datadog
