envoy-gateway/tracing/datadog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: datadog-tracing
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: datadog-tracing
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracing-datadog
spec:
  parentRefs:
    - name: datadog-tracing
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /datadog
      backendRefs:
        - name: infra-backend-v2
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-agent
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: eg-addons
    app.kubernetes.io/name: opentelemetry-collector
    component: standalone-collector
  ports:
    - protocol: TCP
      port: 8126
      targetPort: 8126
