envoy-gateway/tracing/zipkin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-special-case
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: eg-special-case
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: zipkin-tracing
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracing-zipkin
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: eg-special-case
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /zipkin
      backendRefs:
        - name: infra-backend-v2
          port: 8080
